more overflow fixes

--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ a:active {
   background: lightslategray;
   color: lightslategray;
   width: 100%;
-  height: 100vh;
+  height: 110vh;
   padding-right: 10%;
   overflow: hidden;
 }
